--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,4 @@
 public-f net.minecraft.client.renderer.RenderBuffers f_110093_ # fixedBuffers
 public net.minecraft.world.entity.Mob f_21342_ # moveControl
+public net.minecraft.client.Minecraft f_90991_ # timer
+public-f net.minecraft.client.Timer f_92521_ # msPerTick
