--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ apply plugin: 'org.spongepowered.mixin'
 
 version = '1.0.0'
 group = 'com.github.alexthe668' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'iwannaskate-ALPHA'
+archivesBaseName = 'iwannaskate'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
